--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Vivek Bhansali
 description: >- # this means to ignore newlines until "baseurl:"
-  Vivek Bhansali's random musings and thoughts.
+  Random musings and thoughts.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: vivekbhansali
